# Habit-Tracker

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  data.json  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_duration_alter_habit_frequency.py
telegram_app/: apps.py  bot.py  tasks.py  tests.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py
